almost done fixing